Decision boundary plot showing.

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,5 +5,10 @@
     <body>
         <h1>Logic Gates Visualiser</h1>
         <p>Select a logic gate to see a perceptrons corresponding decision boundary plotted!</p>
+        {% block content %}
+            {% if chart %}
+                <img src="data:image/png;base64, {{chart|safe}}" />
+            {% endif %}
+        {% endblock content %}
     </body>
 </html>
